# noddo

./: README.md  index.html  package-lock.json  package.json
hook/: install.sh  noddo-hook.sh
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  server.rs  state.rs  tray.rs  window.rs
src/components/: ActionButtons.tsx  ExplainInput.tsx  PermissionCard.tsx  ToolDetail.tsx
src/hooks/: usePermission.ts
src/styles/: global.css
